--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 	<body>
 		<h1> Minha pagina HTML</h1>
 		<h2>Alteração da pagina HTML Hoje</h2>
+		<h3>Teste de commit na linha do tempo</h3>
 	</body>
 </html>
